--- a/index.html
+++ b/index.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto Educa Futuro</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        EducaFuturo
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#cursos">Cursos</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <section id="home" class="bg1">
-      <h1>Transforme seu futuro.</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic iure ratione cumque itaque officiis totam, molestiae numquam harum eum nobis</p>
-      <button>Começar Agora</button>
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projeto Educa Futuro</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 
-    <section id="cursos" class="bg2">
-      <h2>Nossos cursos</h2>
-      <div class="card-wrapper">
-        <div class="card">Robótica</div>
-        <div class="card">Programação</div>
-        <div class="card">Desgin</div>
-      </div>
-    </section>
-  </body>
+<body>
+  <header>
+    <div class="logo">
+      EducaFuturo
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#cursos">Cursos</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="home" class="bg1">
+    <h1>Transforme seu futuro.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic iure ratione cumque itaque officiis totam, molestiae
+      numquam harum eum nobis</p>
+    <button>Começar Agora</button>
+  </section>
+
+  <section id="cursos" class="bg2">
+    <h2>Nossos cursos</h2>
+    <div class="card-wrapper">
+      <div class="card">Robótica</div>
+      <div class="card">Programação</div>
+      <div class="card">Desgin</div>
+    </div>
+  </section>
+
+  <section id="sobre" class="bg1">
+    <h2>Sobre Nós</h2>
+    <p>Somos uma equipe comprometida em oferecer soluções de qualidade, unindo conhecimento, dedicação e inovação. Nosso
+      trabalho é guiado pela busca constante por eficiência, transparência e bons resultados, sempre respeitando as
+      necessidades de cada cliente.
+      Acreditamos que boas relações são construídas com confiança, clareza e responsabilidade. Por isso, atuamos com
+      foco em entregar experiências positivas, desde o primeiro contato até a conclusão de cada projeto.
+      Nosso objetivo é evoluir continuamente, acompanhando as mudanças do mercado e aprimorando nossos processos para
+      oferecer serviços cada vez mais consistentes e alinhados às expectativas de quem confia em nosso trabalho.</p>
+  </section>
+
+  <section id="contatos" class="bg2">
+    <h2>Contatos</h2>
+    <p>Estamos à disposição para esclarecer dúvidas, receber sugestões ou conversar sobre novas oportunidades. Se você
+      deseja mais informações sobre nossos serviços ou precisa de atendimento personalizado, entre em contato conosco.
+      Você pode nos chamar pelos canais disponíveis nesta página. Retornaremos o mais breve possível, com atenção e
+      comprometimento.Será um prazer falar com você.</p>
+    <a href="wa.me" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon>Fale Conosco no WhatsApp</a>
+
+  </section>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
